styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;1,100;1,300;1,500&display=swap');


*
{
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
    
    color: #3b3b3b;
}

html, body{
    margin: 0;
    padding: 0;
}
body
{
    /* height: 100vh; */
}
h1
{
    font-weight: 300;
    font-size: 1.6rem;
}
h2
{
    font-weight: 400;
    margin: 10px;
    font-size: 1.3em;
}
h3
{
    font-weight: 300;
    margin: 6px;
}
.Background-Container
{
    position: absolute;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    top: 0;
    bottom: 0;
    
    display: flex;
    justify-content: center;
    align-items: center;
}
.background-image
{
    opacity: .7;
    min-height:100%;
    min-width: 100%;
    object-fit: cover;
    /* Blur ?? */
    filter:blur(4px);
}
.MainScreen
{
    display: flex;
    flex-direction: column;
    height: 100vh;
    /* grid-template-rows: 10vh; */
}

.hidden 
{
    display: none !important; 
    /* visibility: collapse;
    position: absolute; */
}

/* HEADER */
.main-header
{
    margin: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    max-height: 80px;
}

.main-header-item
{
    margin: 15px;
    /* border: solid 5px white; */
    
    background-size: contain;
    background-repeat: no-repeat;
    height: 70%;
    width: 100%;
    flex-grow: .7;
    flex-basis: 0;
    
}
.header-title
{
    flex-grow: 2;
    flex-basis: 0;
    
}
.main-header button
{
    border: none;
    background-color: transparent;
    justify-self: left;   
    cursor: pointer;
    height: 50%;
    flex-grow: 0.1;
    margin-right: 1.5em;
}
.MenuButton
{
    background-image: url('Images/MenuButton.png');
    background-position: left;
}
.main-logo
{       
    background-image: url('Images/Life-Mentoring-Icon-Only-Logo-Grey.png');
    background-position: right;
}


/* CONTENT BODY */

.main-container
{
    position: relative;
    flex-grow: 1;
    flex-shrink: 1;
    margin: 8%;
    margin-bottom: 10%;
}

.Screen-Container
{
    box-sizing: content-box;
    position: relative;
    display: grid;
    grid-template-rows: 25%;
    grid-template-columns: 100%;
    justify-content: center;
    justify-items: center;
    align-items: center;
    /* display: flex;
    flex-direction: column; */
    height: 95%;
}
.Screen-Heading-Container
{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
    text-align: center;
}

.content-container
{
    /* background-color: rgba(51, 51, 51, 0.158); */
    display: flex;
    height: 100%;
    width: 80%;
    justify-content: center;
    
}

/* VALUES */
.ValueCard
{
    position: absolute;
    background-color: rgba(51, 51, 51, 0.158);
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    justify-self: center;
    /* margin-top: 40%; */
    width: 150px; 
    height: 150px;
    border-radius: 50%;
	
}

/* TODO: Need to fix swipe areas expanding scroll area*/
.Swipe-End
{
    position: absolute;
    background-color: rgba(51, 51, 51, 0.158);
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    justify-self: center;
    /* margin-top: 40%; */
    width: 100px; 
    height: 200px;
    border-radius: 50%;
    
    transition: width 0.2s, height 0.2s;
}

.Swipe-Left
{
	left: -25%;
    justify-content:flex-end;
	padding: 15px;
}
.Swipe-Right
{
	right: -25%;
    justify-content:flex-start;
	padding: 15px;
}

